istio/mtls/team-b-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: team-b-mtls
  namespace: team-b
spec:
  mtls:
    mode: STRICT    # Reject ALL non-mTLS traffic
